--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,8 @@
     display: flex;
     justify-content: center;
 }
-.menu-area {
-    display: flex;
-}
-
 .menu-list {
-    justify-content: center;
+    display: flex;
     list-style-type: none;
 }
 
@@ -25,6 +21,16 @@
     padding: 10px;
 }
 
+
+.menu-area {
+    display: flex;
+    justify-content: center;
+}
+
 .search-area {
     justify-content: flex-end;
+}
+
+.search-area * {
+    padding: 10px;
 }
